Добавлен новый метод и изменена структура проекта
