# src/internal/api/models/requests.go
@@ -10,13 +10,14 @@ import (
 )
 
 type CategoriesModelInterface interface {
-	GetCategories(ctx context.Context, pool *pgxpool.Pool) ([]Categories, error)
+	GetCategories(ctx context.Context, pool *pgxpool.Pool) ([]Category, error)
+	AddCategory(ctx context.Context, pool *pgxpool.Pool, category *Category) (*Category, error)  
 }
 
 type CategoriesModelImpl struct {}
 
-func (c *CategoriesModelImpl) GetCategories(ctx context.Context, pool *pgxpool.Pool) ([]Categories, error) {
-	var categories []Categories
+func (c *CategoriesModelImpl) GetCategories(ctx context.Context, pool *pgxpool.Pool) ([]Category, error) {
+	var categories []Category
 
 	sql, args, err := (sq.
 		Select("id, main_category, name, description").
@@ -34,4 +35,27 @@ func (c *CategoriesModelImpl) GetCategories(ctx context.Context, pool *pgxpool.P
 	}
 
 	return categories, err
+}
+
+func (c *CategoriesModelImpl) AddCategory(ctx context.Context, pool *pgxpool.Pool, category *Category) (*Category, error) {
+
+	query := sq.
+		Insert("categories").
+		Columns("id, main_category, name, description").
+		Values(category.ID, category.MainCategory, category.Name, category.Description).
+		PlaceholderFormat(sq.Dollar)
+
+	// Генерация SQL-запроса и списка аргументов
+	sqlQuery, args, err := query.ToSql()
+	if err != nil {
+		logrus.Fatal("Failed to generate SQL query:", err)
+	}
+
+	// Выполняем запрос
+	_, err = pool.Exec(ctx, sqlQuery, args...)
+	if err != nil {
+		logrus.Fatal("Failed to execute query:", err)
+	}
+
+	return category, err
 }
